--- a/frontend/src/styles/topics.module.css
+++ b/frontend/src/styles/topics.module.css
@@ -1,7 +1,19 @@
 .topicCard {
     background-color: cornsilk;
-}
-
-.cardText {
+    padding: 1rem;
+    margin-bottom: 1rem;
+    cursor: pointer;
+    transition: box-shadow 0.2s ease-in-out;
+  }
+  
+  .topicCard:hover {
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 8px, rgba(0, 0, 0, 0.1) 0px 2px 4px;
+  }
+  
+  .cardText {
     white-space: pre-line;
-}
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-height: 5rem;
+  }
+  
